2001-11-05  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* MAINTAINERS: Add self as s390/s390x maintainer.

2001-11-02  Tom Rix  <trix@bluey.cygnus.com>

	* MAINTAINERS: Add self as PPC XCOFF maintainer.

2001-11-02  Nick Clifton  <nickc@cambridge.redhat.com>

	* configure.in (ALL_LINGUAS): Add "fr" and "tr".
	* configure: Regernate.
	* po/fr.po: New file.
	* po/tr.po: New file.

2001-10-30  Hans-Peter Nilsson  <hp@bitrange.com>

	* MAINTAINERS: Add self as MMIX port maintainer.
	* readelf.c: Include elf/mmix.h.
	(guess_is_rela): MMIX is RELA.
	(dump_relocations): Handle MMIX relocations.
	* Makefile.am: Regenerate dependencies.
	* Makefile.in: Regenerate.

2001-10-13  Nick Clifton  <nickc@cambridge.redhat.com>

	* readelf.c (parse_args): Handle multiple options to the -w
	switch.

2001-10-12  Jakub Jelinek  <jakub@redhat.com>

	* readelf.c (get_section_type_name): Don't print SHT_ prefix for
	LOPROC, LOOS and LOUSER.

Thu Oct 11 21:45:17 2001  J"orn Rennecke <amylaar@onetel.net.uk>

	* MAINTAINERS: Update my email address.

2001-10-03  Alan Modra  <amodra@bigpond.net.au>

	* doc/Makefile.in: Regenerate.
	* configure: Regenerate.

2001-10-02  Nick Clifton  <nickc@cambridge.redhat.com>

	* readelf.c (display_debug_line, display_debug_pubnames,
	display_debug_info, display_debug_frames): Detect and warn
	about 64-bit format entries.
	(display_debug_aranges): Reword 64-bit warning.
	(debug_displays): Add .debug_pubtypes as a known, but not yet
	supported, debug section.

2001-10-02  Alan Modra  <amodra@bigpond.net.au>

	* coffdump.c (PROGRAM_VERSION): Delete.
	(main <'V'>): Call print_version.
	* srconv.c: Likewise.
	* sysdump.c: Likewise.
	* version.c (program_version): Remove.
	(print_version): Use BFD_VERSION_STRING.  Just print the current
	year in copyright message.
	* addr2line.c (program_version): Remove unused declaration.
	* objdump.c (display_target_tables): Use BFD_VERSION_STRING in
	place of BFD_VERSION.