@@ -71,7 +71,7 @@ int linenumber;
 "("             { return '('; }
 ")"             { return ')'; }
 ","             { return ','; }
-[A-Za-z0-9/$:.\-\_]+  { 	
+[A-Za-z0-9/\\$:.\-\_]+  { 	
 		yylval.name =  xstrdup (yytext);
 		return FILENAME;
 		}
